# proto_embed

./: .gitignore  .tokenize.py.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bin  compile.sh  errlog_II.txt  mac_test.py  paradise_lost.txt.rtf  probed  probed.cbp  python_path.txt  rc_test.py  test.txt  test.txt_1.csv  test_tfit.py  testsg.sh  tokenize.py  wetest  word_embedder.py
data_exp/: data_exp.py  nldatexp.py  update.sh
logs/: log  vlog.txt
oschema/: modael.py
scripts/: corpusStatsFromDir.py  fake_task.py  rc_test.py  search_path.py  test_tfit.py  web_scraper.py  word_emb_experimental.py  word_embedder.py
src/: main.cc  skipgram.h  skipgram_II.cc  test_wordembedder.cc  tokenize.h  wordembedder.cc  wordembedder.h
src/cli/: cli.cc  cli.h
src/fake_task/: fake_task.cc  fake_task.h
src/freqdist/: freqdist.cc
src/skipgram/: skipgram.cc  skipgram.h
src/tokenize/: tokenize.cc  tokenize.h
src/utils/: utils.cc  utils.h
src/wordembedder/: wordembedder.cc  wordembedder.h
utils/: DistScan.py
